syntax = "proto3";

package vorpal.package.v0;

service PackageService {
    rpc Build (stream BuildRequest) returns (stream BuildResponse);
}

enum PackageSystem {
    UNKNOWN = 0;
    AARCH64_LINUX = 1;
    AARCH64_MACOS = 2;
    X86_64_LINUX = 3;
    X86_64_MACOS = 4;
}

message PackageOutput {
    string hash = 1;
    string name = 2;
}

message BuildRequest {
    PackageSystem target = 1;
    bool sandbox = 2;
    map<string, string> environment = 3;
    map<string, string> script = 4;
    optional bytes source_data = 5;
    optional bytes source_data_signature = 6;
    repeated PackageOutput packages = 7;
    string name = 8;
    string source_hash = 9;
}

message BuildResponse {
    string output = 1;
}
